02_EnhancedShockBurst_Rx.cydsn/REBUILD.log
--------------- Rebuild Started: 12/27/2017 21:18:17 Project: 02_EnhancedShockBurst_Rx, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\nRF24_NRF_FUNCS.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\nRF24_LL_SPI.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\nRF24_NRF_COMMANDS.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\UART_AsmGnu.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\UART.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_SPI_UART.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_PM.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_SPI.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_BOOT.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_SPI_BOOT.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\IRQ.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\IRQ_PM.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\isr_IRQ.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SS.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SS_PM.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\CE.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\CE_PM.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_SCBCLK.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_sclk_m.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_sclk_m_PM.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_miso_m.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_miso_m_PM.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_mosi_m.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\SPI_mosi_m_PM.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\Cm0plusStart.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\CyLFClk.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\LED.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\LED_PM.o"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\02_EnhancedShockBurst_Rx.hex"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\02_EnhancedShockBurst_Rx.elf"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\02_EnhancedShockBurst_Rx.map"
Deleting file ".\02_EnhancedShockBurst_Rx.cycdx"
Deleting file ".\02_EnhancedShockBurst_Rx.rpt"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM0p\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\Xwx47\AppData\Local\Cypress Semiconductor\PSoC Creator\4.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\Xwx47\Documents\Creator\nRF24_Example_Projects\02_EnhancedShockBurst_Rx.cydsn\02_EnhancedShockBurst_Rx.cyprj -d CY8C4045AZI-S413 -s C:\Users\Xwx47\Documents\Creator\nRF24_Example_Projects\02_EnhancedShockBurst_Rx.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0plus -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0p\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0p\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:51:5: warning: implicit declaration of function 'nRF24_setRxPipe0Address' [-Wimplicit-function-declaration]
     nRF24_setRxPipe0Address(RX_ADDR, 5);
     ^
main.c:52:5: warning: implicit declaration of function 'nRF24_setTxAddress' [-Wimplicit-function-declaration]
     nRF24_setTxAddress(RX_ADDR, 5);
     ^
main.c:53:5: warning: implicit declaration of function 'nRF24_startListening' [-Wimplicit-function-declaration]
     nRF24_startListening();
     ^
main.c:62:13: error: unknown type name 'NrfIRQ'
             NrfIRQ flag = nRF24_getIRQFlag();
             ^
main.c:62:27: warning: implicit declaration of function 'nRF24_getIRQFlag' [-Wimplicit-function-declaration]
             NrfIRQ flag = nRF24_getIRQFlag();
                           ^
main.c:63:13: warning: implicit declaration of function 'nRF24_clearIRQFlag' [-Wimplicit-function-declaration]
             nRF24_clearIRQFlag(flag);
             ^
main.c:68:36: warning: implicit declaration of function 'nRF24_getPayloadSize' [-Wimplicit-function-declaration]
             uint8_t payload_size = nRF24_getPayloadSize(NRF_PIPE0);
                                    ^
main.c:71:13: warning: implicit declaration of function 'nRF24_getRxPayload' [-Wimplicit-function-declaration]
             nRF24_getRxPayload(&data, payload_size);
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 12/27/2017 21:19:02 ---------------
